fixed flex wrap and some styling in 500px design

--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,36 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media(max-width: 500px) {
+    .title-container div {
+        background-size: cover; }
+    .artist {
+        width: 80%;
+        flex-wrap: wrap;
+        margin-top: 7%;
+    }
+        
+    .artists-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 80%;
+        margin: 0 auto;
+    }
+    nav {
+        width: 56%; }
+    img {
+    height: 24rem;}
+    h1 {
+        font-size: 4.6rem; }
+    a {
+    text-decoration: none;
+    color: black;
+    font-size: 2.1rem; }
+    h1, p, .name, .bio {
+        font-family: 'Raleway', sans-serif;
+        text-align: center;
+        margin: 4% 0; }
+
+}
